public/assets/css/style.css
/* ... */
.banner-post-five {
  margin-bottom: 25px;
  border-bottom: 1px solid #d8d8d8;
  padding-bottom: 25px;
}

.banner-post-five:last-child {
  padding: 0;
  border: none;
}

.banner-post-thumb-five {
  overflow: hidden;
  margin-bottom: 12px;
  position: relative;
}

.banner-post-thumb-five img {
  /* width: 100%; */
  /* height: 180px; */
  object-fit: cover;
  width: 480px;
  height: 270px;
}

.banner-post-five:hover .banner-post-thumb-five img {
  transform: scale(1.1);
}

.post-tag-four {
  font-size: 10px;
  font-weight: 600;
  text-transform: uppercase;
  display: block;
  line-height: 1.4;
  color: var(--tg-icon-color);
  margin-bottom: 12px;
  text-align: justify;
}

.banner-post-content-five .post-title {
  font-size: 18px;
  margin-bottom: 10px;
  line-height: 1.4;
}

.banner-post-five:hover .banner-post-content-five .post-title a {
  background-size: 100% 1px;
}

.banner-post-content-five .blog-post-meta .list-wrap {
  justify-content: flex-start;
}

.banner-post-six {
  margin-bottom: 30px;
}

.banner-post-thumb-six {
  overflow: hidden;
  margin-bottom: 20px;
}

.banner-post-thumb-six img {
  width: 100%;
  height: 428px;
  object-fit: cover;
}

.banner-post-six:hover .banner-post-thumb-six img {
  transform: scale(1.1);
}

.banner-post-content-six {
  text-align: center;
}

.banner-post-content-six .post-title {
  margin-bottom: 20px;
  font-size: 28px;
  font-weight: 800;
}

.banner-post-six:hover .banner-post-content-six .post-title a {
  background-size: 100% 2px;
}

.banner-post-content-six .blog-post-meta {
  margin-bottom: 15px;
}

.banner-post-content-six p {
  margin-bottom: 0;
}

.banner-post-seven .banner-post-thumb-five img {
  height: 50%;
  width: 100%;
  object-fit: cover;
}

.banner-post-seven .banner-post-thumb-five .paly-btn {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 50px;
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: var(--tg-white);
  border-radius: 50%;
  font-size: 18px;
}

.banner-post-seven .banner-post-thumb-five .paly-btn:hover {
  background: var(--tg-primary-color);
  color: var(--tg-white);
}

.banner-post-seven {
  position: relative;
}

.banner-post-seven::before {
  content: '';
  position: absolute;
  top: 0px;
  right: -20px;
  width: 1px;
  height: 100%;
  background: var(--tg-border-color);
}

.today-post-wrap .row [class*='col-']:last-child .banner-post-seven::before {
  display: none;
}

/* banner-sidebar */
.sidebar-wrap-three {
  padding-left: 10px;
  position: sticky;
  top: 90px;
}

.sidebar-wrap-three::before {
  content: '';
  position: absolute;
  left: -10px;
  top: 0;
  width: 1px;
  height: 100%;
  background: var(--tg-border-color);
}

.sidebar-widget-three {
  margin-bottom: 40px;
}

.sidebar-widget-three:last-child {
  margin-bottom: 0;
}

.widget-title-three .section-title-line {
  bottom: auto;
  top: 0;
}

.widget-title.widget-title-three {
  padding-bottom: 0;
  padding-top: 20px;
}

.stories-post {
  display: flex;
  align-items: center;
  flex-direction: row-reverse;
  gap: 15px;
  justify-content: space-between;
  padding-bottom: 25px;
  margin-bottom: 25px;
  border-bottom: 1px solid var(--tg-border-color);
}

.stories-post:last-child {
  padding-bottom: 0;
  margin-bottom: 0;
  border-bottom: none;
}

.stories-post-thumb {
  width: 90px;
  flex: 0 0 auto;
  border-radius: 50%;
  overflow: hidden;
}

.stories-post-thumb img {
  width: 100%;
  height: 90px;
  object-fit: cover;
}

.stories-post:hover .stories-post-thumb img {
  transform: scale(1.1);
}

.stories-post-content .post-title {
  margin-bottom: 10px;
  font-size: 17px;
  font-weight: 600;
  line-height: 1.4;
}

.stories-post:hover .stories-post-content .post-title a {
  background-size: 100% 1px;
}

.stories-post-content .blog-post-meta .list-wrap {
  justify-content: flex-start;
}

.stories-post-content .post-tag-four {
  margin-bottom: 5px;
}

.stories-post-two {
  background: var(--tg-gray-three);
  padding: 15px 20px 20px;
  margin-bottom: 3px;
  display: flex;
  align-items: flex-start;
  gap: 15px;
}

.stories-post-two:last-child {
  margin-bottom: 0;
}

.stories-post-two .number {
  margin-bottom: 0;
  font-size: 26px;
  color: #c2c2c2;
  font-weight: 600;
}

.stories-post-two:hover .stories-post-content .post-title a {
  background-size: 100% 1px;
}

.sidebar-img-two {
  text-align: center;
}

/*=============================
	07. Breadcrumb
===============================*/
.breadcrumb-area {
  /* background: var(--tg-gray-three); */
  padding: 15px 0;
}

.breadcrumb-content .breadcrumb {
  margin-bottom: 0;
}

.breadcrumb-content .breadcrumb-item {
  font-size: 12px;
  font-weight: 500;
  font-family: var(--tg-heading-font-family);
  /* color: var(--tg-icon-color); */
}

.breadcrumb-content .sub-cagetory-breadcrumb-item {
  font-size: 20px;
  font-weight: 500;
  font-family: var(--tg-heading-font-family);
  /* color: #183354; */
  /* gap: 10px; */
  /* margin-right: 30px; */
}

.breadcrumb-content .sub-cagetory-breadcrumb-tag {
  font-size: 20px;
  font-weight: 500;
  font-family: var(--tg-heading-font-family);
  color: #183354;
  /* gap: 10px; */
}

.breadcrumb-content .sub-cagetory-breadcrumb-item span {
  border: 1px solid #fef3f1;
  padding: 10px 25px;
  background-color: #fef3f1;
  margin-left: 30px;
}

.breadcrumb-content .sub-cagetory-breadcrumb-item span:hover {
  background-color: #183354;
}

.breadcrumb-content .sub-cagetory-breadcrumb-item .active span {
  background-color: #183354;
}

.breadcrumb-content .sub-cagetory-breadcrumb-item a.active span {
  color: var(--tg-white);
  /* Background color for active link */
}

.breadcrumb-content .sub-cagetory-breadcrumb-item a {
  color: var(--tg-primary-color);
}

.breadcrumb-content .sub-cagetory-breadcrumb-item a:hover {
  color: var(--tg-white);
}

.breadcrumb-content .breadcrumb-item a {
  color: var(--tg-icon-color);
}
/* ... */

